--- a/index.html
+++ b/index.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>David Arrowsmith - Frontend Developer</title>
 </head>
 <body>
+
+
+<header>
+    <h1>DAVID ARROWSMITH</h1>
+    <nav id="header-links">
+        <a href="#about">about</a>
+        <a href="#projects">projects</a>
+        <a href="#interests">interests</a>
+        <a href="#contact">contact</a>
+    </nav>
+</header>
+
     
 </body>
 </html>
