Add About section.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 
-
 <header>
     <h1>DAVID ARROWSMITH</h1>
     <nav id="header-links">
@@ -19,6 +18,22 @@
     </nav>
 </header>
 
-    
+<section id="about">
+    <h2>I'm David Arrowsmith, a JavaScript Developer based in Manchester, UK.</h2>
+    <p>I'm transitioning to a career in software development from a background in chemical research. Chemistry is fun but tech is even better!</p>
+    <p>I get a real buzz out of problem solving and designing elegant solutions to simplify complex systems. I also love collaborating with other ethusiastic people.</p>
+    <p> I started coding in 2019. In 2020 I started working towards employment in the sector, and in March 2021 I joined a software development bootcamp at <a href="https://www.manchestercodes.com/?utm_term=manchester%20codes&utm_campaign=Brand&utm_source=adwords&utm_medium=ppc&hsa_acc=4219584815&hsa_cam=12134714800&hsa_grp=119769793151&hsa_ad=502508725898&hsa_src=g&hsa_tgt=kwd-380100275891&hsa_kw=manchester%20codes&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gclid=Cj0KCQjw38-DBhDpARIsADJ3kjmdze3CRgQHrHScWk_VyRJnVZyzVztjNJFpXWNwm14u3efsBaSxeU8aApExEALw_wcB">Manchester Codes</a> to enhance my skills and my knowledge of best practices.</p>
+    <p>Now I'm ready to assume a full-time position as a junior software developer!</p>
+
+    <img src="assets/about-image.jpg" style="height:500px;"/>
+
+    <h3>SKILLSET</h3>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ul>
+</section>
+
 </body>
 </html>
