Add Projects section.

--- a/index.html
+++ b/index.html
@@ -35,5 +35,36 @@
     </ul>
 </section>
 
+<section id="projects">
+    <h2>Projects</h2>
+    <p>Some of these projects use free hosting tiers and may take a few seconds to load :3</p>
+    <ul>
+        <li>Abraham Fox - Architect: An architect's portfolio page. HTML & CSS.
+            <ul>
+                <li><a href="https://devarrowsmith.github.io/architect-profile">Website</a></li>
+                <li><a href="https://github.com/DevArrowsmith/architect-profile">GitHub</a></li>
+            </ul>
+        </li>
+        <li>Spacefrens: A simple web app that displays the number of people in space using a cute graphical interface. Uses data from the <a href="http://open-notify.org/">Open Notify</a> API.
+            <ul>
+                <li><a href="https://spacefrens.herokuapp.com/">Website</a></li>
+                <li><a href="https://github.com/DevArrowsmith/spacefrens">GitHub</a></li>
+            </ul>
+        </li>
+        <li>The National Pokédex Game: A variant of a popular javascript project. Uses data from the <a href="https://pokeapi.co/">PokéAPI</a>.
+            <ul>
+                <li><a href="https://devarrowsmith.github.io/national-pokedex-game/">Website</a></li>
+                <li><a href="https://github.com/DevArrowsmith/national-pokedex-game">GitHub</a></li>
+            </ul>
+        </li>
+        <li>Platformer 00: A super simple platformer game powered by an event loop.
+            <ul>
+                <li><a href="https://devarrowsmith.github.io/platformer-00/">Website</a></li>
+                <li><a href="https://github.com/DevArrowsmith/platformer-00">GitHub</a></li>
+            </ul>
+        </li>
+    </ul>
+</section>
+
 </body>
 </html>
