Add Interests section.

--- a/index.html
+++ b/index.html
@@ -66,5 +66,18 @@
     </ul>
 </section>
 
+<section id="interests">
+    <h2>INTERESTS</h2>
+    <ul>
+        <li>Exercise: Hiking, Running, Rockclimbing, Yoga.</li>
+        <li>Music: Electronic, Dance, Industrial, Lofi.</li>
+        <li>Reading: Sci-fi, Satire, Human Geography, Biography.</li>
+        <li>Tech: Software Development. 3D Modelling, 3D Printing, Affinity Studio, Digital Art.</li>
+        <li>Gaming: VR, Boardgames.</li>
+        <li>Lifestyle: Cats, coffee & cocktails.</li>
+    </ul>
+</section>
+
+
 </body>
 </html>
