--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
     </ul>
 </section>
 
+<section id="contact">
+    <h2>CONTACT ME</h2>
+    <a href="https://www.linkedin.com/in/david-arrowsmith/"><img src="assets/linkedin.svg"/></a>
+    <a href="https://twitter.com/Dev_Arrowsmith"><img src="assets/twitter.svg"/></a>
+    <a href="https://github.com/devarrowsmith"><img src="assets/github.svg"/></a>
+</section>
 
 </body>
 </html>
