--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+          background-color: white;
+          color: #242424;
+        }
+        
+        .dark-mode {
+          background-color: #242424;
+          color: white;
+        }
+    </style>
+    <script>
+        const darkMode = () => {
+            document.body.classList.toggle("dark-mode");
+        }
+    </script>
     <title>David Arrowsmith - Frontend Developer</title>
 </head>
 <body>
@@ -16,6 +32,7 @@
         <a href="#interests">interests</a>
         <a href="#contact">contact</a>
     </nav>
+    <button onClick="darkMode()">Toggle Dark Mode</button>
 </header>
 
 <section id="about">
