Add stopwatch emoji to Projects section.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <section id="projects">
     <h2>Projects</h2>
-    <p>Some of these projects use free hosting tiers and may take a few seconds to load :3</p>
+    <p>⏱️ Some of these projects use free hosting tiers and may take a few seconds to load.</p>
     <ul>
         <li>Abraham Fox - Architect: An architect's portfolio page. HTML & CSS.
             <ul>
