Create stylesheet. Migrate existing styles from index.html to stylesheet.

--- a/index.html
+++ b/index.html
@@ -4,17 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        body {
-          background-color: white;
-          color: #242424;
-        }
-        
-        .dark-mode {
-          background-color: #242424;
-          color: white;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script>
         const darkMode = () => {
             document.body.classList.toggle("dark-mode");
@@ -22,8 +12,8 @@
     </script>
     <title>David Arrowsmith - Frontend Developer</title>
 </head>
-<body>
 
+<body>
 <header>
     <h1>DAVID ARROWSMITH</h1>
     <nav id="header-links">
@@ -42,7 +32,7 @@
     <p> I started coding in 2019. In 2020 I started working towards employment in the sector, and in March 2021 I joined a software development bootcamp at <a href="https://www.manchestercodes.com/?utm_term=manchester%20codes&utm_campaign=Brand&utm_source=adwords&utm_medium=ppc&hsa_acc=4219584815&hsa_cam=12134714800&hsa_grp=119769793151&hsa_ad=502508725898&hsa_src=g&hsa_tgt=kwd-380100275891&hsa_kw=manchester%20codes&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gclid=Cj0KCQjw38-DBhDpARIsADJ3kjmdze3CRgQHrHScWk_VyRJnVZyzVztjNJFpXWNwm14u3efsBaSxeU8aApExEALw_wcB">Manchester Codes</a> to enhance my skills and my knowledge of best practices.</p>
     <p>Now I'm ready to assume a full-time position as a junior software developer!</p>
 
-    <img src="assets/about-image.jpg" style="height:500px;"/>
+    <img src="assets/about-image.jpg"/>
 
     <h3>SKILLSET</h3>
     <ul>
