Replace final section with footer.

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
     </ul>
 </section>
 
-<section id="contact">
+<footer id="contact">
     <h2>CONTACT ME</h2>
     <a href="https://www.linkedin.com/in/david-arrowsmith/"><img src="assets/linkedin.svg"/></a>
     <a href="https://twitter.com/Dev_Arrowsmith"><img src="assets/twitter.svg"/></a>
     <a href="https://github.com/devarrowsmith"><img src="assets/github.svg"/></a>
-</section>
+</footer>
 
 </body>
 </html>
