--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script>
         const darkMode = () => {
@@ -23,6 +25,8 @@
         <a href="#contact">contact</a>
     </nav>
     <button onClick="darkMode()">Toggle Dark Mode</button>
+    <p>Hi! I'm David Arrowsmith, a Software Developer based in Manchester, UK.</p>
+
 </header>
 
 <section id="about">
