Style nav bar (wip).

--- a/index.html
+++ b/index.html
@@ -17,16 +17,19 @@
 
 <body>
 <header>
-    <h1>DAVID ARROWSMITH</h1>
-    <nav id="header-links">
-        <a href="#about">about</a>
-        <a href="#projects">projects</a>
-        <a href="#interests">interests</a>
-        <a href="#contact">contact</a>
-    </nav>
-    <button onClick="darkMode()">Toggle Dark Mode</button>
+    <div>
+        <h1>DAVID ARROWSMITH</h1>
+        <div>
+            <nav>
+                <a href="#about">about</a>
+                <a href="#projects">projects</a>
+                <a href="#interests">interests</a>
+                <a href="#contact">contact</a>
+            </nav>
+            <button onClick="darkMode()">Toggle Dark Mode</button>
+        </div>
+    </div>
     <p>Hi! I'm David Arrowsmith, a Software Developer based in Manchester, UK.</p>
-
 </header>
 
 <section id="about">
