--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>David Arrowsmith - Frontend Developer</title>
+    <title>David Arrowsmith</title>
 </head>
 <body>
 <header>
     <div>
-        <h1>DAVID ARROWSMITH</h1>
-        <div>
-            <nav>
-                <a href="#about">about</a>
-                <a href="#projects">projects</a>
-                <a href="#interests">interests</a>
-                <a href="#contact">contact</a>
-            </nav>
-        </div>
+        <h1>David Arrowsmith</h1>
+        <nav>
+            <a href="#about">about</a>
+            <a href="#projects">projects</a>
+            <a href="#interests">interests</a>
+            <a href="#contact">contact</a>
+        </nav>
     </div>
     <p>Hi! I'm David Arrowsmith, a Software Developer based in Manchester, UK.</p>
 </header>
