--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1>David Arrowsmith</h1>
         <nav>
             <a href="#about">about</a>
+            <a href="#skillset">skillset</a>
             <a href="#projects">projects</a>
             <a href="#interests">interests</a>
             <a href="#contact">contact</a>
@@ -30,7 +31,9 @@
     <p>I get a real buzz out of problem solving and designing elegant solutions to simplify complex systems. I also love collaborating with other ethusiastic people.</p>
     <p> I started coding in 2019. In 2020 I started working towards employment in the sector, and in March 2021 I joined a software development bootcamp at <a href="https://www.manchestercodes.com/?utm_term=manchester%20codes&utm_campaign=Brand&utm_source=adwords&utm_medium=ppc&hsa_acc=4219584815&hsa_cam=12134714800&hsa_grp=119769793151&hsa_ad=502508725898&hsa_src=g&hsa_tgt=kwd-380100275891&hsa_kw=manchester%20codes&hsa_mt=e&hsa_net=adwords&hsa_ver=3&gclid=Cj0KCQjw38-DBhDpARIsADJ3kjmdze3CRgQHrHScWk_VyRJnVZyzVztjNJFpXWNwm14u3efsBaSxeU8aApExEALw_wcB">Manchester Codes</a> to enhance my skills and my knowledge of best practices.</p>
     <p>Now I'm ready to assume a full-time position as a junior software developer!</p>
+</section>
 
+<section id="skillset">
     <h3>SKILLSET</h3>
     <ul>
         <li>HTML</li>
