--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
         <li>HTML</li>
         <li>CSS</li>
         <li>JavaScript</li>
+        <li>React</li>
+        <li>Express</li>
+        <li>MySQL</li>
     </ul>
 </section>
 
