--- a/index.html
+++ b/index.html
@@ -48,32 +48,36 @@
 <section id="projects">
     <h2>Projects</h2>
     <p>⏱️ Some of these projects use free hosting tiers and may take a few seconds to load.</p>
-    <ul>
-        <li>Abraham Fox - Architect: An architect's portfolio page. HTML & CSS.
-            <ul>
-                <li><a href="https://devarrowsmith.github.io/architect-profile">Website</a></li>
-                <li><a href="https://github.com/DevArrowsmith/architect-profile">GitHub</a></li>
-            </ul>
-        </li>
-        <li>Spacefrens: A simple web app that displays the number of people in space using a cute graphical interface. Uses data from the <a href="http://open-notify.org/">Open Notify</a> API.
-            <ul>
-                <li><a href="https://spacefrens.herokuapp.com/">Website</a></li>
-                <li><a href="https://github.com/DevArrowsmith/spacefrens">GitHub</a></li>
-            </ul>
-        </li>
-        <li>The National Pokédex Game: A variant of a popular javascript project. Uses data from the <a href="https://pokeapi.co/">PokéAPI</a>.
-            <ul>
-                <li><a href="https://devarrowsmith.github.io/national-pokedex-game/">Website</a></li>
-                <li><a href="https://github.com/DevArrowsmith/national-pokedex-game">GitHub</a></li>
-            </ul>
-        </li>
-        <li>Platformer 00: A super simple platformer game powered by an event loop.
-            <ul>
-                <li><a href="https://devarrowsmith.github.io/platformer-00/">Website</a></li>
-                <li><a href="https://github.com/DevArrowsmith/platformer-00">GitHub</a></li>
-            </ul>
-        </li>
-    </ul>
+    <div id="projects-grid">
+        <div class="project-1">
+            <h3>Abraham Fox - Architect: An architect's portfolio page. HTML & CSS.</h3>
+            <a href="https://devarrowsmith.github.io/architect-profile">Website</a>
+            <a href="https://github.com/DevArrowsmith/architect-profile">GitHub</a>
+        </div>
+        <img class="project-1" src="./assets/projects/architect.png" alt="Screenshot of an architect's profile page. Photographs of modern minimalist buildings are shown in a grid of panes of various sizes, over a white background."/>
+
+        <div class="project-2">
+            <h3>Spacefrens: A simple web app that displays the number of people in space using a cute graphical interface. Uses data from the <a href="http://open-notify.org/">Open Notify</a> API.</h3>
+            <a href="https://spacefrens.herokuapp.com/">Website</a>
+            <a href="https://github.com/DevArrowsmith/spacefrens">GitHub</a>
+        </div>
+        <img class="project-2" src="./assets/projects/spacefrens.png" alt="A yellow banner displays the text 'spacefrens' in a low pixel font. below this some drawm images of astronauts in space suits can be seen flying by a spaceship porthole. The planet Earth is visible in the background."/>
+
+        <div class="project-3">
+            <h3>The National Pokédex Game: A variant of a popular javascript project. Uses data from the <a href="https://pokeapi.co/">PokéAPI</a>.</h3>
+            <a href="https://devarrowsmith.github.io/national-pokedex-game/">Website</a>
+            <a href="https://github.com/DevArrowsmith/national-pokedex-game">GitHub</a>
+        </div>
+        <img class="project-3" src="./assets/projects/pokedex.png" alt="A screenshot from a game. Images and names of individual pokemon are shown on square panels. two of these show the pokémon Ditto, and the message 'Try Again'."/>
+
+        <div class="project-4">
+            <h3>Platformer 00: A super simple platformer game powered by an event loop.</h3>
+            <a href="https://devarrowsmith.github.io/platformer-00/">Website</a>
+            <a href="https://github.com/DevArrowsmith/platformer-00">GitHub</a>
+        </div>
+        <img class="project-4" src="assets/projects/platformer.png" alt="A minimalistic platform game is shown. An orange dot representative of the player is jumping between two black oblong platforms. Other geometric shapes can be seen, including some black squares which act as obstacles in the game, and two green squares which mark the goal area. The player's aim is to navigate the orange square to the goal."/>
+        
+    </div>
 </section>
 
 <section id="interests">
