Style projects section (wip). Establish grid layout.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <img class="project-1" src="./assets/projects/architect.png" alt="Screenshot of an architect's profile page. Photographs of modern minimalist buildings are shown in a grid of panes of various sizes, over a white background."/>
 
         <div class="project-2">
-            <h3>Spacefrens: A simple web app that displays the number of people in space using a cute graphical interface. Uses data from the <a href="http://open-notify.org/">Open Notify</a> API.</h3>
+            <h3>Spacefrens: A simple web app that displays the number of people in space using a cute graphical interface. Uses data from the <a href="http://open-notify.org/">Open Notify API</a>.</h3>
             <a href="https://spacefrens.herokuapp.com/">Website</a>
             <a href="https://github.com/DevArrowsmith/spacefrens">GitHub</a>
         </div>
