--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <p>⏱️ Some of these projects use free hosting tiers and may take a few seconds to load.</p>
     <div id="projects-grid">
         <div class="project-1">
-            <h3>Abraham Fox</h3>
+            <a href="https://devarrowsmith.github.io/architect-profile"><h3>Abraham Fox</h3></a>
             <p>An architect's portfolio page. HTML & CSS.</p>
             <a href="https://devarrowsmith.github.io/architect-profile">Website</a>
             <a href="https://github.com/DevArrowsmith/architect-profile">GitHub</a>
@@ -58,7 +58,7 @@
         <img class="project-1" src="./assets/projects/architect.png" alt="Screenshot of an architect's profile page. Photographs of modern minimalist buildings are shown in a grid of panes of various sizes, over a white background."/>
 
         <div class="project-2">
-            <h3>Spacefrens</h3>
+            <a href="https://spacefrens.herokuapp.com/"><h3>Spacefrens</h3></a>
             <p>A simple web app that displays the number of people in space using a cute graphical interface. Uses data from the <a href="http://open-notify.org/">Open Notify API</a>.</p>
             <a href="https://spacefrens.herokuapp.com/">Website</a>
             <a href="https://github.com/DevArrowsmith/spacefrens">GitHub</a>
@@ -66,7 +66,7 @@
         <img class="project-2" src="./assets/projects/spacefrens.png" alt="A yellow banner displays the text 'spacefrens' in a low pixel font. below this some drawm images of astronauts in space suits can be seen flying by a spaceship porthole. The planet Earth is visible in the background."/>
 
         <div class="project-3">
-            <h3>The National Pokédex Game</h3>
+            <a href="https://devarrowsmith.github.io/national-pokedex-game/"><h3>The National Pokédex Game</h3></a>
             <p> A variant of a popular javascript project. Uses data from the <a href="https://pokeapi.co/">PokéAPI</a>.</p>
             <a href="https://devarrowsmith.github.io/national-pokedex-game/">Website</a>
             <a href="https://github.com/DevArrowsmith/national-pokedex-game">GitHub</a>
@@ -74,7 +74,7 @@
         <img class="project-3" src="./assets/projects/pokedex.png" alt="A screenshot from a game. Images and names of individual pokemon are shown on square panels. two of these show the pokémon Ditto, and the message 'Try Again'."/>
 
         <div class="project-4">
-            <h3>Platformer 00</h3>
+            <a href="https://devarrowsmith.github.io/platformer-00/"><h3>Platformer 00</h3></a>
             <p>A super simple platformer game powered by an event loop.</p>
             <a href="https://devarrowsmith.github.io/platformer-00/">Website</a>
             <a href="https://github.com/DevArrowsmith/platformer-00">GitHub</a>
