Refactor interests section.

--- a/index.html
+++ b/index.html
@@ -85,14 +85,59 @@
 
 <section id="interests">
     <h2>INTERESTS</h2>
-    <ul>
-        <li>Exercise: Hiking, Running, Rockclimbing, Yoga.</li>
-        <li>Music: Electronic, Dance, Industrial, Lofi.</li>
-        <li>Reading: Sci-fi, Satire, Human Geography, Biography.</li>
-        <li>Tech: Software Development. 3D Modelling, 3D Printing, Affinity Studio, Digital Art.</li>
-        <li>Gaming: VR, Boardgames.</li>
-        <li>Lifestyle: Cats, coffee & cocktails.</li>
-    </ul>
+    <div>
+        <div>
+            <h3>Exercise</h3>
+            <ul>
+                <li>Hiking</li>
+                <li>Running</li>
+                <li>Rockclimbing</li>
+                <li>Yoga</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Music</h3>
+            <ul>
+                <li>Electronic</li>
+                <li>Dance</li>
+                <li>Industrial</li>
+                <li>Lofi</li>
+            </ul>
+        </div>
+        <div>
+            <h3>Reading</h3> 
+            <ul>
+                <li>Sci-fi</li>
+                <li>Satire</li>
+                <li>Human Geography</li>
+                <li>Biography</li>
+            </ul>
+            </div>
+        <div>
+            <h3>Tech</h3>
+            <ul>
+                <li>Software Development</li>
+                <li>Affinity Studio</li>
+                <li>3D Modelling</li>
+                <li>3D Printing</li>
+            </ul> 
+        </div>
+        <div>
+            <h3>Gaming</h3>
+            <ul>
+                <li>VR</li>
+                <li>Boardgames</li>
+            </ul>         
+        </div>
+        <div>
+            <h3>Lifestyle</h3>
+            <ul>
+                <li>Cats</li>
+                <li>Coffee</li>
+                <li>Cocktails</li>
+            </ul>    
+        </div>
+    </div>
 </section>
 
 <footer id="contact">
