Apply backgrounds to interests grid.

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
 <section id="interests">
     <h2>INTERESTS</h2>
-    <div>
-        <div>
+    <div id="interests-grid">
+        <div class="interests-exercise">
             <h3>Exercise</h3>
             <ul>
                 <li>Hiking</li>
@@ -95,7 +95,7 @@
                 <li>Yoga</li>
             </ul>
         </div>
-        <div>
+        <div class="interests-music">
             <h3>Music</h3>
             <ul>
                 <li>Electronic</li>
@@ -104,16 +104,16 @@
                 <li>Lofi</li>
             </ul>
         </div>
-        <div>
+        <div class="interests-reading">
             <h3>Reading</h3> 
             <ul>
                 <li>Sci-fi</li>
-                <li>Satire</li>
                 <li>Human Geography</li>
                 <li>Biography</li>
+                <li>Design</li>
             </ul>
             </div>
-        <div>
+        <div class="interests-tech">
             <h3>Tech</h3>
             <ul>
                 <li>Software Development</li>
@@ -122,14 +122,14 @@
                 <li>3D Printing</li>
             </ul> 
         </div>
-        <div>
+        <div class="interests-gaming">
             <h3>Gaming</h3>
             <ul>
                 <li>VR</li>
                 <li>Boardgames</li>
             </ul>         
         </div>
-        <div>
+        <div class="interests-lifestyle">
             <h3>Lifestyle</h3>
             <ul>
                 <li>Cats</li>
