--- a/index.html
+++ b/index.html
@@ -144,9 +144,9 @@
     <h2>CONTACT ME</h2>
     <hr />
     <div>
-        <a href="https://www.linkedin.com/in/david-arrowsmith/"><img src="assets/linkedin.svg"/></a>
-        <a href="https://twitter.com/Dev_Arrowsmith"><img src="assets/twitter.svg"/></a>
-        <a href="https://github.com/devarrowsmith"><img src="assets/github.svg"/></a>
+        <a href="https://www.linkedin.com/in/david-arrowsmith/"><img src="assets/icons/linkedin.svg"/></a>
+        <a href="https://twitter.com/Dev_Arrowsmith"><img src="assets/icons/twitter.svg"/></a>
+        <a href="https://github.com/devarrowsmith"><img src="assets/icons/github.svg"/></a>
     </div>
 </footer>
 
