--- a/index.html
+++ b/index.html
@@ -50,35 +50,38 @@
     <div id="projects-grid">
         <div class="project-1">
             <a href="https://devarrowsmith.github.io/architect-profile"><h3>Abraham Fox</h3></a>
-            <p>An architect's portfolio page. HTML & CSS.</p>
-            <a href="https://devarrowsmith.github.io/architect-profile">Website</a>
-            <a href="https://github.com/DevArrowsmith/architect-profile">GitHub</a>
+            <p>Architect's portfolio. HTML & CSS.</p>
+            <span>
+                <a href="https://devarrowsmith.github.io/architect-profile">Website</a>
+                <a href="https://github.com/DevArrowsmith/architect-profile">GitHub</a>
+            </span>
         </div>
-        <img class="project-1" src="./assets/projects/architect.png" alt="Screenshot of an architect's profile page. Photographs of modern minimalist buildings are shown in a grid of panes of various sizes, over a white background."/>
 
         <div class="project-2">
             <a href="https://spacefrens.herokuapp.com/"><h3>Spacefrens</h3></a>
-            <p>A simple web app that displays the number of people in space using a cute graphical interface. Uses data from the <a href="http://open-notify.org/">Open Notify API</a>.</p>
-            <a href="https://spacefrens.herokuapp.com/">Website</a>
-            <a href="https://github.com/DevArrowsmith/spacefrens">GitHub</a>
+            <p>Displays people currently in space. HTML, CSS, JavaScript, Express. Heroku deployment.</p>
+            <span>
+                <a href="https://spacefrens.herokuapp.com/">Website</a>
+                <a href="https://github.com/DevArrowsmith/spacefrens">GitHub</a>
+            </span>
         </div>
-        <img class="project-2" src="./assets/projects/spacefrens.png" alt="A yellow banner displays the text 'spacefrens' in a low pixel font. below this some drawm images of astronauts in space suits can be seen flying by a spaceship porthole. The planet Earth is visible in the background."/>
-
         <div class="project-3">
             <a href="https://devarrowsmith.github.io/national-pokedex-game/"><h3>The National Pokédex Game</h3></a>
-            <p> A variant of a popular javascript project. Uses data from the <a href="https://pokeapi.co/">PokéAPI</a>.</p>
-            <a href="https://devarrowsmith.github.io/national-pokedex-game/">Website</a>
-            <a href="https://github.com/DevArrowsmith/national-pokedex-game">GitHub</a>
+            <p> A variant of a popular JavaScript game utilising API data. React, Styled-Components.</p>
+            <span>
+                <a href="https://devarrowsmith.github.io/national-pokedex-game/">Website</a>
+                <a href="https://github.com/DevArrowsmith/national-pokedex-game">GitHub</a>
+            </span>
         </div>
-        <img class="project-3" src="./assets/projects/pokedex.png" alt="A screenshot from a game. Images and names of individual pokemon are shown on square panels. two of these show the pokémon Ditto, and the message 'Try Again'."/>
 
         <div class="project-4">
             <a href="https://devarrowsmith.github.io/platformer-00/"><h3>Platformer 00</h3></a>
-            <p>A super simple platformer game powered by an event loop.</p>
-            <a href="https://devarrowsmith.github.io/platformer-00/">Website</a>
-            <a href="https://github.com/DevArrowsmith/platformer-00">GitHub</a>
+            <p>Minimal platform game. JavaScript, HTML, CSS.</p>
+            <span>
+                <a href="https://devarrowsmith.github.io/platformer-00/">Website</a>
+                <a href="https://github.com/DevArrowsmith/platformer-00">GitHub</a>
+            </span>
         </div>
-        <img class="project-4" src="assets/projects/platformer-crop.png" alt="A minimalistic platform game is shown. An orange dot representative of the player is jumping between two black oblong platforms. Other geometric shapes can be seen, including some black squares which act as obstacles in the game, and two green squares which mark the goal area. The player's aim is to navigate the orange square to the goal."/>
     </div>
 </section>
 
