Responsively style text and image aspects of header section.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             <a href="#contact">contact</a>
         </nav>
     </div>
-    <p>Hi! I'm David Arrowsmith, a Software Developer based in Manchester, UK.</p>
+    <img src="assets/about-image-cropped.jpg"/>
     <img src="assets/about-image.jpg"/>
+    <p>Hi! I'm David Arrowsmith, a Software Developer based in Manchester, UK.</p>
 </header>
 
 <section id="about">
