--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <div>
         <h1>David Arrowsmith</h1>
         <p>DA</p>
+        <i class="fas fa-chevron-down"></i>
         <nav>
             <a href="#about">about</a>
             <a href="#skillset">skillset</a>
