Add caret link to header.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <img src="assets/about-image-cropped.jpg"/>
     <img src="assets/about-image.jpg"/>
     <p>Hi! I'm David Arrowsmith, a Software Developer based in Manchester, UK.</p>
+    <a href="#about"><i class="fas fa-caret-down"></i></a>
 </header>
 
 <section id="about">
