--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
 
         </ul>
     </div>
+    <a href="#projects"><i class="fas fa-caret-down"></i></a>
 </section>
 
 <section id="projects">
