Add link caret to about section.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <p>I simplify complex systems.</p>
         <p>I design elegant solutions.</p>
         <p>I'm here to solve your problems.</p>
+        <span>
+            <a href="#skillset"><i class="fas fa-caret-down"></i></a>
+        </span>    
     </div>
 </section>
 
