Size project frames & section.

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 <section id="projects">
     <h2>Projects</h2>
-    <div id="projects-grid">
+    <div id="projects-container">
         <div class="project-1">
             <a href="https://devarrowsmith.github.io/architect-profile"><h3>Abraham Fox</h3></a>
             <p>Architect's portfolio. HTML & CSS.</p>
