Style content of project cards.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <h2>Projects</h2>
     <div id="projects-container">
         <div class="project-1">
-            <a href="https://devarrowsmith.github.io/architect-profile"><h3>Abraham Fox</h3></a>
+            <h3>Abraham Fox</h3>
             <p>Architect's portfolio. HTML & CSS.</p>
             <span>
                 <a href="https://devarrowsmith.github.io/architect-profile">Website</a>
@@ -125,7 +125,7 @@
         </div>
 
         <div class="project-2">
-            <a href="https://spacefrens.herokuapp.com/"><h3>Spacefrens</h3></a>
+            <h3>Spacefrens</h3>
             <p>Displays people currently in space. HTML, CSS, JavaScript, Express. Heroku deployment.</p>
             <span>
                 <a href="https://spacefrens.herokuapp.com/">Website</a>
@@ -133,7 +133,7 @@
             </span>
         </div>
         <div class="project-3">
-            <a href="https://devarrowsmith.github.io/national-pokedex-game/"><h3>The National Pokédex Game</h3></a>
+            <h3>The National Pokédex Game</h3>
             <p> A variant of a popular JavaScript game utilising API data. React, Styled-Components.</p>
             <span>
                 <a href="https://devarrowsmith.github.io/national-pokedex-game/">Website</a>
@@ -142,7 +142,7 @@
         </div>
 
         <div class="project-4">
-            <a href="https://devarrowsmith.github.io/platformer-00/"><h3>Platformer 00</h3></a>
+            <h3>Platformer 00</h3>
             <p>Minimal platform game. JavaScript, HTML, CSS.</p>
             <span>
                 <a href="https://devarrowsmith.github.io/platformer-00/">Website</a>
