Style interests section.

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
 <section id="interests">
     <h2>INTERESTS</h2>
-    <div id="interests-grid">
+    <div id="interests-container">
         <div class="interests-exercise">
             <h3>Exercise</h3>
             <ul>
