--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <img src="assets/about-image-cropped.jpg"/>
     <img src="assets/about-image.jpg"/>
     <p>Hi! I'm David Arrowsmith, a Software Developer based in Manchester, UK.</p>
-    <a href="#about"><i class="fas fa-caret-down"></i></a>
+    <span class="section-link-container">
+        <a href="#about"><i class="fas fa-caret-down"></i></a>
+    </span>
 </header>
 
 <section id="about">
@@ -37,8 +39,8 @@
         <p>I simplify complex systems.</p>
         <p>I design elegant solutions.</p>
         <p>I'm here to solve your problems.</p>
-        <span>
-            <a href="#skillset"><i class="fas fa-caret-down"></i></a>
+        <span class="section-link-container">
+            <a href="#skillset" class="section-link"><i class="fas fa-caret-down"></i></a>
         </span>    
     </div>
 </section>
@@ -109,7 +111,9 @@
 
         </ul>
     </div>
-    <a href="#projects"><i class="fas fa-caret-down"></i></a>
+    <span class="section-link-container">
+        <a href="#projects" class="section-link"><i class="fas fa-caret-down"></i></a>
+    </span>
 </section>
 
 <section id="projects">
