Fix section scrolling offset.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <p>I design elegant solutions.</p>
         <p>I'm here to solve your problems.</p>
         <span class="section-link-container">
-            <a href="#skillset" class="section-link"><i class="fas fa-caret-down"></i></a>
+            <a href="#skillset"><i class="fas fa-caret-down"></i></a>
         </span>    
     </div>
 </section>
@@ -112,7 +112,7 @@
         </ul>
     </div>
     <span class="section-link-container">
-        <a href="#projects" class="section-link"><i class="fas fa-caret-down"></i></a>
+        <a href="#projects"><i class="fas fa-caret-down"></i></a>
     </span>
 </section>
 
@@ -154,6 +154,9 @@
             </span>
         </div>
     </div>
+    <span class="section-link-container">
+        <a href="#interests"><i class="fas fa-caret-down"></i></a>
+    </span>
 </section>
 
 <section id="interests">
