Add section link caret to interests section.

--- a/index.html
+++ b/index.html
@@ -214,6 +214,9 @@
             </ul>    
         </div>
     </div>
+    <span class="section-link-container">
+        <a href="#contact"><i class="fas fa-caret-down"></i></a>
+    </span>
 </section>
 
 <footer id="contact">
