Add back-top-top section link to contact section.

--- a/index.html
+++ b/index.html
@@ -227,6 +227,11 @@
         <a href="https://twitter.com/Dev_Arrowsmith"><img src="assets/icons/twitter.svg"/></a>
         <a href="https://github.com/devarrowsmith"><img src="assets/icons/github.svg"/></a>
     </div>
+    <span class="section-link-container">
+        <a href="#">
+            <i class="fas fa-caret-up"></i></a>
+            <p>TOP</p>
+    </span>
 </footer>
 
 </body>
