Set social media links to open in new tabs.

--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
     <h2>CONTACT ME</h2>
     <hr />
     <div>
-        <a href="https://www.linkedin.com/in/david-arrowsmith/"><img src="assets/icons/linkedin.svg"/></a>
-        <a href="https://twitter.com/Dev_Arrowsmith"><img src="assets/icons/twitter.svg"/></a>
-        <a href="https://github.com/devarrowsmith"><img src="assets/icons/github.svg"/></a>
+        <a href="https://www.linkedin.com/in/david-arrowsmith/" target="_blank"><img src="assets/icons/linkedin.svg"/></a>
+        <a href="https://twitter.com/Dev_Arrowsmith" target="_blank"><img src="assets/icons/twitter.svg"/></a>
+        <a href="https://github.com/devarrowsmith" target="_blank"><img src="assets/icons/github.svg"/></a>
     </div>
     <span class="section-link-container">
         <a href="#">
