--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,8 @@
     <title>Contact David Arrowsmith</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Contact Form</h1>
+    </header>
 </body>
 </html>
