--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 </section>
 
 <footer id="contact">
-    <span><i class="fas fa-caret-right"></i><h2>CONTACT ME</h2><i class="fas fa-caret-left"></i></span>
+    <span><i class="fas fa-caret-right"></i><a href="./contact.html" target="_blank"><h2>CONTACT ME</h2></a><i class="fas fa-caret-left"></i></span>
     <hr />
     <div>
         <a href="https://www.linkedin.com/in/david-arrowsmith/" target="_blank"><img src="assets/icons/linkedin.svg"/></a>
