--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,30 @@
     <title>Contact David Arrowsmith</title>
 </head>
 <body>
-    <header>
-        <h1>Contact Form</h1>
-    </header>
+<header>
+    <h1>Contact Form</h1>
+</header>
+<section>
+    <form action="#" method="post">
+        <ul>
+            <li>
+                <label for="contact-name">Full name</label>
+                <input type="text" id="ontact-name" name="contact-name">
+            </li>
+            <li>
+                <label for="contact-email">Email address</label>
+                <input type="email" id="contact-email" name="contact-email">
+            </li>
+            <li>
+                <label for="contact-text">Your message</label>
+                <textarea id="contact-text" name="contact-text"></textarea>
+            </li>
+            <li class="button">
+                <button type="submit">send</button>
+            </li>
+        </ul>
+    </form>
+</section>
+
 </body>
 </html>
