--- a/contact.html
+++ b/contact.html
@@ -10,9 +10,13 @@
     <title>Contact David Arrowsmith</title>
 </head>
 <body>
+<div id="top-bar">
+    <p>DA</p>
+    <p>David Arrowsmith</p>
+</div>
 <div>
     <header>
-        <h1>Contact Form</h1>
+        <h1>Contact Me</h1>
     </header>
     <section>
         <form action="#" method="post">
