Change contact form submit button text.

--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
                 <textarea id="contact-text" name="contact-text"></textarea>
             </li>
             <li class="button">
-                <button type="submit">send</button>
+                <button type="submit">Submit</button>
             </li>
         </ul>
     </form>
