Add chevron to submit button in contact form.

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/bc4c3dd39d.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="contact.css">
     <title>Contact David Arrowsmith</title>
 </head>
@@ -33,7 +34,7 @@
                 <textarea id="contact-text" name="contact-text"></textarea>
             </li>
             <li class="button">
-                <button type="submit">Submit</button>
+                <button type="submit">Submit<i class="fas fa-caret-right"></i></button>
             </li>
         </ul>
     </form>
