--- a/contact.html
+++ b/contact.html
@@ -33,8 +33,15 @@
                 <label for="contact-text">Your message:</label>
                 <textarea id="contact-text" name="contact-text"></textarea>
             </li>
-            <li class="button">
-                <button type="submit">Submit<i class="fas fa-caret-right"></i></button>
+            <li>
+                <ul class="buttons">
+                    <li class="button">
+                        <button type="submit">Submit<i class="fas fa-caret-right"></i></button>
+                    </li>
+                    <li class="button">
+                        <button type="clear">Clear<i class="fas fa-times"></i></button>
+                    </li>
+                </ul>
             </li>
         </ul>
     </form>
