Corrext type of clear form button: set to 'reset'.

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                         <button type="submit" id="contact-button-submit">Submit<i class="fas fa-caret-right"></i></button>
                     </li>
                     <li class="button">
-                        <button type="clear" id="contact-button-clear">Clear<i class="fas fa-times"></i></button>
+                        <button type="reset" id="contact-button-clear">Clear<i class="fas fa-times"></i></button>
                     </li>
                 </ul>
             </li>
