--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/bc4c3dd39d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="contact.css">
+    <link rel="stylesheet" type="text/css" href="css/contact.css">
     <title>Contact David Arrowsmith</title>
 </head>
 <body>
