Style template for mobile.

--- a/template.html
+++ b/template.html
@@ -31,8 +31,31 @@
 </section>
 
 <footer>
-
+    <img src="assets/about-image-thumb.jpg" alt="Portrait photograph of David Arrowsmith taken by a canal in Manchester on a sunny day."/>
+    <p>David Arrowsmith</p>
+    <p>I'm a full-stack developer experienced in JavaScript and related technologies.</p>
+    <a href="contact.html">I'm available for hire</a>
+    <span>
+        <a href="https://www.linkedin.com/in/david-arrowsmith/" target="_blank">
+            <i class="fa fa-linkedin-square" aria-hidden="true"></i>
+        </a>
+        <a href="https://twitter.com/Dev_Arrowsmith" target="_blank">
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+        </a>
+        <a href="https://github.com/devarrowsmith" target="_blank">
+            <i class="fa fa-github" aria-hidden="true"></i>
+        </a>
+    </span>
+    <div>
+        <p>Quick Links</p>
+        <a href="index.html">Home</a>            
+        <a href="about.html">About</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+    </div>
+    <hr/>
 </footer>
-
 </body>
 </html>
+
+<!-- TODO: Don't forget to replace head title in final page versions! -->
