--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#contact">contact</a>
         </nav>
     </div>
-    <img src="assets/about-image-cropped.jpg" alt="Photograph of David Arrowsmith."/>
+    <img src="assets/about-image-cropped.jpg" alt="Portrait photograph of David Arrowsmith taken by a canal in Manchester on a sunny day."/>
     <p>Hi! I'm David Arrowsmith, a Software Developer based in Manchester, UK.</p>
     <span class="section-link-container">
         <a href="#about"><i class="fas fa-caret-down"></i></a>
