Create home, about, projects and contact html & css boilerplate files from templates. Contant not yet added.

--- a/projects.html
+++ b/projects.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Commissioner&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <link rel="stylesheet" type="text/css" href="css/projects.css">
     <script src="https://kit.fontawesome.com/bc4c3dd39d.js" crossorigin="anonymous"></script>
 
-    <title>David Arrowsmith - Home</title>
+    <title>David Arrowsmith - Projects</title>
 
 </head>
 <body>
@@ -26,7 +26,7 @@
 </header>
 
 <section>
-    <h1>Hi! I'm David Arrowsmith</h1>
+    <h1>Projects</h1>
 </section>
 
 <footer>
