Style index.html (wip). Update section html boilerplates & template.html with styling to better format page and section widths.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,22 @@
 </header>
 
 <section>
-    <h1>Hi! I'm David Arrowsmith</h1>
+    <div>
+        <img src="assets/about-image-cropped.jpg" alt="Portrait photograph of David Arrowsmith taken by a canal in Manchester on a sunny day."/>
+        <h2>Hi! I'm David Arrowsmith.</h2>
+        <p>I'm a <span>software developer</span> based in Manchester, UK.</p>
+    </div>
+    <div>
+        <a>
+            <p>View my projects.</p>
+        </a>
+        <a>
+            <p>Let me tell you about my skills.</p>
+        </a>
+        <a>
+            <p>Contact me.</p>
+        </a>
+    </div>
 </section>
 
 <footer>
