--- a/index.html
+++ b/index.html
@@ -28,16 +28,17 @@
 <section>
     <div>
         <img src="assets/about-image-cropped.jpg" alt="Portrait photograph of David Arrowsmith taken by a canal in Manchester on a sunny day."/>
-        <h2>Hi! I'm David Arrowsmith.</h2>
-        <p>I'm a <span>software developer</span> based in Manchester, UK.</p>
+        <h2>Hi! I'm David Arrowsmith, a <span>software developer</span> based in Manchester, UK.</h2>
     </div>
     <div>
         <a>
-            <p>View my projects.</p>
-        </a>
-        <a>
             <p>Let me tell you about my skills.</p>
         </a>
+
+        <a>
+            <p>Take a look at my projects.</p>
+        </a>
+
         <a>
             <p>Contact me.</p>
         </a>
