Style index.html for mobile.

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         <h2>Hi! I'm David Arrowsmith, a <span>software developer</span> based in Manchester, UK.</h2>
     </div>
     <div>
-        <a>
-            <p>Let me tell you about my skills.</p>
+        <a href="about.html">
+            <p>Let me tell you about my skills</p>
         </a>
 
-        <a>
-            <p>Take a look at my projects.</p>
+        <a href="projects.html">
+            <p>Take a look at my projects</p>
         </a>
 
-        <a>
-            <p>Contact me.</p>
+        <a href="contact.html">
+            <p>Contact me</p>
         </a>
     </div>
 </section>
