Add content to projects page. Style for mobile (wip).

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,59 @@
 
 <section>
     <h1>Projects</h1>
+    <div class="projects-container">
+        <div class="project-1">
+            <h2>Abraham Fox</h2>
+            <p>Architect's portfolio. HTML & CSS.</p>
+            <span>
+                <a href="https://devarrowsmith.github.io/architect-profile">Website</a>
+                <a href="https://github.com/DevArrowsmith/architect-profile">GitHub</a>
+            </span>
+        </div>
+
+        <div class="project-2">
+            <h2>Spacefrens</h2>
+            <p>Displays people currently in space. HTML, CSS, JavaScript, Express. Heroku deployment.</p>
+            <span>
+                <a href="https://spacefrens.herokuapp.com/">Website</a>
+                <a href="https://github.com/DevArrowsmith/spacefrens">GitHub</a>
+            </span>
+        </div>
+        <div class="project-3">
+            <h2>The National Pokédex Game</h2>
+            <p> A variant of a popular JavaScript game utilising API data. React, Styled-Components.</p>
+            <span>
+                <a href="https://devarrowsmith.github.io/national-pokedex-game/">Website</a>
+                <a href="https://github.com/DevArrowsmith/national-pokedex-game">GitHub</a>
+            </span>
+        </div>
+
+        <div class="project-4">
+            <h2>Platformer 00</h2>
+            <p>Minimal platform game. JavaScript, HTML, CSS.</p>
+            <span>
+                <a href="https://devarrowsmith.github.io/platformer-00/">Website</a>
+                <a href="https://github.com/DevArrowsmith/platformer-00">GitHub</a>
+            </span>
+        </div>
+    </div>
 </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <footer>
     <img src="assets/about-image-thumb.jpg" alt="Portrait photograph of David Arrowsmith taken by a canal in Manchester on a sunny day."/>
